# SophiaTX-Network

./: CMakeLists.txt  README.md
libraries/app/: application.cpp  database_api.cpp
libraries/app/include/graphene/app/: database_api.hpp
libraries/chain/: CMakeLists.txt  custom_evaluator.cpp  db_init.cpp  stx_evaluator.cpp
libraries/chain/include/graphene/chain/: config.hpp  custom_evaluator.hpp  stx_evaluator.hpp  stx_object.hpp
libraries/chain/include/graphene/chain/protocol/: custom.hpp  types.hpp
libraries/chain/protocol/: custom.cpp
libraries/plugins/miner/: miner.cpp
libraries/utilities/: dirhelper.cpp
libraries/wallet/: wallet.cpp
libraries/wallet/include/graphene/wallet/: wallet.hpp
programs/: CMakeLists.txt
programs/decentd/: main.cpp
programs/sophiatxd/: CMakeLists.txt  main.cpp
scripts/: install.sh
